--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,6 @@ server:
       charset: utf-8
       force: true
       
-
 spring:
   mvc:
     view:
@@ -23,3 +22,14 @@ spring:
   # output:
   #  ansi:
   #    enabled: always
+  
+mybatis: 
+ mapper-locations:
+  - classpath:mapper/**.xml
+ configuration:
+   map-underscore-to-camel-case: true 
+   log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+   
+logging:
+  level:
+    org.mybatis: DEBUG
