--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ repositories {
 }
 
 dependencies {
+	// 이메일
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	// 암호화 
 	implementation 'org.springframework.security:spring-security-crypto'
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
